feat(user): update user interface
